--- a/networking.html
+++ b/networking.html
@@ -1,125 +1,213 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Networking &amp; Connections</title>
-<link href="css/html5reset.css" rel="stylesheet"/>
-<link href="css/style.css" rel="stylesheet"/>
-<!--Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro and body content to help meet the following requirements - this is for the networking and connections page": and then pasted in the client objectives & project requirements"
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Networking &amp; Connections</title>
+    <link rel="stylesheet" href="css/html5reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <!--Content taken & modified from UMGPT with the prompt,
+        "Write me a webpage of intro and body content to help meet the following requirements - this is for the networking and connections page":
+        and then pasted in the client objectives & project requirements.
         UMGPT. (2025). UMGPT ( GPT-4.1 September 7th version) [Large language model]. -->
-</head>
-<body>
-<header id="top">
-<a class="skip-link" href="#main">Skip to Main Content</a>
-<img alt="UMSI Logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg"/>
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="resume.html">Resumes</a></li>
-<li><a aria-current="page" href="networking.html">Networking &amp; Connections</a></li>
-<li><a href="portfolio.html">Portfolio</a></li>
-</ul>
-</nav>
-<h1>Networking &amp; Connections</h1>
-</header>
-<main id="main">
-<section>
-<h2>Why Networking Matters</h2>
-<blockquote>
-        “Networking is about building relationships over time. It helps you learn about roles and teams, get feedback on your work, and find opportunities that rarely appear on job boards.”
-        <br/><small>— Generated with UM GPT</small>
-</blockquote>
-<figure>
-<img alt="Students chatting at a campus networking event." loading="lazy" src="images/networking1.png"/>
-<figcaption>Meet peers, alumni, and employers at UMSI/CDO events.</figcaption>
-</figure>
-</section>
-<section>
-<h2>How to Get Started</h2>
-<blockquote>
-        “Begin with campus events and online presence, then request short informational interviews to learn and build genuine connections.”
-        <br/><small>— Generated with UM GPT</small>
-</blockquote>
-<ul>
-<li><p><strong>On campus:</strong> Attend CDO workshops, career fairs, and employer talks. Take notes and follow up with 1–2 people you met.</p></li>
-<li><p><strong>Online:</strong> Keep your LinkedIn updated; engage with posts from UMSI alumni and communities you care about.</p></li>
-<li><p><strong>Informational interviews:</strong> 15–20 minute chats to learn about someone’s work. Prepare 3–5 questions and always send thanks.</p></li>
-</ul>
-<figure>
-<img alt="Student composing a concise outreach message on a laptop." loading="lazy" src="images/networking2.png"/>
-<figcaption>Short, specific, polite messages get the highest reply rate.</figcaption>
-</figure>
-<h3>Sample Outreach Message</h3>
-<blockquote>
-        “<strong>Subject:</strong> UMSI MSI student seeking advice on UX Research<br/>
-        Hi [Name], I’m a UMSI student focusing on UX Research. I enjoyed your post/project on [topic] and would value 15 minutes of advice on getting started in this space. If you’re open to it, I can work around your schedule next week. Thank you!”
-        <br/><small>— Generated with UM GPT</small>
-</blockquote>
-</section>
-<section>
-<h2>Resources</h2>
-<ul>
-<li><p><a href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?slide=id.g26478bd383d_0_6#slide=id.g26478bd383d_0_6" rel="noopener" target="_blank">Networking Slides: What to say &amp; follow-up</a></p></li>
-<li><p><a href="https://docs.google.com/document/d/1cwq2KtdKQbO-tICHKUyKRA3QY4_3VJ8NLC2kwPBY4dI/edit?tab=t.0" rel="noopener" target="_blank">Outreach &amp; Informational Interview Script (Doc)</a></p></li>
-<li><p><a href="https://docs.google.com/presentation/d/1QR0UA8V4d_hjHuayVbzF5_bx8d_8m3Ohvx9e5SiBodg/edit?slide=id.g187a33b4e7_2_86#slide=id.g187a33b4e7_2_86" rel="noopener" target="_blank">Follow-up &amp; Thank-you Examples (Slides)</a></p></li>
-</ul>
-<h3>Quick Checklist</h3>
-<ul>
-<li><p>Attend 1 event and message 2 people this week</p></li>
-<li><p>Send 1 informational-interview request</p></li>
-<li><p>Post 1 short update about your project or learning</p></li>
-</ul>
-</section>
-</main>
-<footer>
-<p>
-<p>University of Michigan School of Information | <a href="https://umsi.instructure.com/courses/137916">UMSI Career Development Office</a> • <span class="year"></span></p>
-<p>© <span id="year"></span> UMSI. All rights reserved.</p>
-</footer>
-<a aria-label="Back to top" class="back-to-top" href="#top" id="back-to-top">↑ Top</a><script>
-  document.getElementById("year").innerHTML = new Date().getFullYear();
-window.onload = function () {
-  var btn = document.getElementById("back-to-top");
-  var timer = null;
-  var isTop = true;
+  </head>
+  <body>
+    <header id="top">
+      <a class="skip-link" href="#main">Skip to Main Content</a>
+      <img
+        src="images/UMSI_signature_vertical_informal_solidblue.jpg"
+        alt="UMSI Logo"
+      />
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resumes</a></li>
+          <li>
+            <a href="networking.html" aria-current="page"
+              >Networking &amp; Connections</a
+            >
+          </li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
+      <h1>Networking &amp; Connections</h1>
+    </header>
 
-  window.onscroll = function () {
-    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+    <main id="main">
+      <section>
+        <h2>Why Networking Matters</h2>
+        <blockquote>
+          “Networking is about building relationships over time. It helps you
+          learn about roles and teams, get feedback on your work, and find
+          opportunities that rarely appear on job boards.”
+          <br /><small>— Generated with UM GPT</small>
+        </blockquote>
 
-    if (scrollTop > 100) {
-      btn.style.display = "block";
-    } else {
-      btn.style.display = "none";
-    }
+        <figure>
+          <img
+            src="images/networking1.png"
+            alt="Students chatting at a campus networking event."
+            loading="lazy"
+          />
+          <figcaption>
+            Meet peers, alumni, and employers at UMSI/CDO events.
+          </figcaption>
+        </figure>
+      </section>
 
-    if (!isTop) {
-      clearInterval(timer);
-    }
-    isTop = false;
-  };
+      <section>
+        <h2>How to Get Started</h2>
+        <blockquote>
+          “Begin with campus events and online presence, then request short
+          informational interviews to learn and build genuine connections.”
+          <br /><small>— Generated with UM GPT</small>
+        </blockquote>
 
-  btn.onclick = function () {
-    timer = setInterval(function () {
-      var osTop = document.documentElement.scrollTop || document.body.scrollTop;
+        <ul>
+          <li>
+            <p>
+              <strong>On campus:</strong> Attend CDO workshops, career fairs, and
+              employer talks. Take notes and follow up with 1–2 people you met.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Online:</strong> Keep your LinkedIn updated; engage with
+              posts from UMSI alumni and communities you care about.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Informational interviews:</strong> 15–20 minute chats to
+              learn about someone’s work. Prepare 3–5 questions and always send
+              thanks.
+            </p>
+          </li>
+        </ul>
 
-      var speed = Math.floor(-osTop / 5);
+        <figure>
+          <img
+            src="images/networking2.png"
+            alt="Student composing a concise outreach message on a laptop."
+            loading="lazy"
+          />
+          <figcaption>
+            Short, specific, polite messages get the highest reply rate.
+          </figcaption>
+        </figure>
 
-      document.documentElement.scrollTop = document.body.scrollTop = osTop + speed;
+        <h3>Sample Outreach Message</h3>
+        <blockquote>
+          “<strong>Subject:</strong> UMSI MSI student seeking advice on UX
+          Research<br />
+          Hi [Name], I’m a UMSI student focusing on UX Research. I enjoyed your
+          post/project on [topic] and would value 15 minutes of advice on
+          getting started in this space. If you’re open to it, I can work around
+          your schedule next week. Thank you!”
+          <br /><small>— Generated with UM GPT</small>
+        </blockquote>
+      </section>
 
-      isTop = true;
+      <section>
+        <h2>Resources</h2>
+        <ul>
+          <li>
+            <p>
+              <a
+                href="https://docs.google.com/presentation/d/1R6azi49e7vd3ubRtdm33qG6Aq3bLBDBue7blM6pv49I/edit?slide=id.g26478bd383d_0_6#slide=id.g26478bd383d_0_6"
+                target="_blank"
+                rel="noopener"
+                >Networking Slides: What to say &amp; follow-up</a
+              >
+            </p>
+          </li>
+          <li>
+            <p>
+              <a
+                href="https://docs.google.com/document/d/1cwq2KtdKQbO-tICHKUyKRA3QY4_3VJ8NLC2kwPBY4dI/edit?tab=t.0"
+                target="_blank"
+                rel="noopener"
+                >Outreach &amp; Informational Interview Script (Doc)</a
+              >
+            </p>
+          </li>
+          <li>
+            <p>
+              <a
+                href="https://docs.google.com/presentation/d/1QR0UA8V4d_hjHuayVbzF5_bx8d_8m3Ohvx9e5SiBodg/edit?slide=id.g187a33b4e7_2_86#slide=id.g187a33b4e7_2_86"
+                target="_blank"
+                rel="noopener"
+                >Follow-up &amp; Thank-you Examples (Slides)</a
+              >
+            </p>
+          </li>
+        </ul>
 
-      if (osTop === 0) {
-        clearInterval(timer);
-      }
-    }, 5);
-  };
-};
-</script></body>
-<!-- Content and script logic adapted from:
-     Wang, F. (2016). “实现返回顶部效果的3种方式”.
-     Retrieved from https://frankwang0909.github.io/back-to-top.html 
--->
-</script></body>
+        <h3>Quick Checklist</h3>
+        <ul>
+          <li><p>Attend 1 event and message 2 people this week</p></li>
+          <li><p>Send 1 informational-interview request</p></li>
+          <li><p>Post 1 short update about your project or learning</p></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>
+        University of Michigan School of Information |
+        <a href="https://umsi.instructure.com/courses/137916"
+          >UMSI Career Development Office</a
+        >
+        • <span class="year"></span>
+      </p>
+      <p>© <span id="year"></span> UMSI. All rights reserved.</p>
+    </footer>
+
+    <a id="back-to-top" class="back-to-top" href="#top" aria-label="Back to top"
+      >↑ Top</a
+    >
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+
+      window.onload = function () {
+        var btn = document.getElementById("back-to-top");
+        var timer = null;
+        var isTop = true;
+
+        window.onscroll = function () {
+          var scrollTop =
+            document.documentElement.scrollTop || document.body.scrollTop;
+
+          btn.style.display = scrollTop > 100 ? "block" : "none";
+
+          if (!isTop) {
+            clearInterval(timer);
+          }
+          isTop = false;
+        };
+
+        btn.onclick = function () {
+          timer = setInterval(function () {
+            var osTop =
+              document.documentElement.scrollTop || document.body.scrollTop;
+
+            var speed = Math.floor(-osTop / 5);
+            document.documentElement.scrollTop =
+              document.body.scrollTop =
+                osTop + speed;
+
+            isTop = true;
+
+            if (osTop === 0) {
+              clearInterval(timer);
+            }
+          }, 5);
+        };
+      };
+    </script>
+    <!-- Content and script logic adapted from:
+         Wang, F. (2016). “实现返回顶部效果的3种方式”.
+         Retrieved from https://frankwang0909.github.io/back-to-top.html -->
+  </body>
 </html>
