--- a/404.html
+++ b/404.html
@@ -1,95 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 — Page Not Found</title>
-  <link rel="stylesheet" href="css/html5reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <style>
-    .not-found{min-height:60vh;display:grid;place-items:center;text-align:center;padding:2rem}
-    .not-found h1{font-size:2rem;margin:.5rem 0;color:#00274C}
-    .not-found p{color:#444}
-    .actions{margin-top:1rem;display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap}
-    .btn{border:1px solid #e6e9ee;background:#f4f7fa;color:#00274C;padding:.6rem .9rem;border-radius:.5rem;text-decoration:none;display:inline-block;min-height:44px}
-  </style>
-</head>
-<body>
-  <header id="top">
-    <a class="skip-link" href="#main">Skip to Main Content</a>
-    <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resumes</a></li>
-        <li><a href="networking.html">Networking & Connections</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="main" class="not-found">
-    <div>
-      <h1>404 — Page Not Found</h1>
-      <p>We can't find the page you're looking for. Try one of these:</p>
-      <div class="actions">
-        <a class="btn" href="index.html">Go Home</a>
-        <a class="btn" href="resume.html">Resume Resources</a>
-        <a class="btn" href="networking.html">Networking</a>
-        <a class="btn" href="portfolio.html">Portfolio</a>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    <p>University of Michigan School of Information | <a href="https://umsi.instructure.com/courses/137916">UMSI Career Development Office</a> • <span class="year"></span></p>
-    <p>© <span id="year"></span> UMSI. All rights reserved.</p>
-  </footer>
-  <a href="#top" id="back-to-top" class="back-to-top" aria-label="Back to top">↑ Top</a>
-  <script>
-  document.getElementById("year").innerHTML = new Date().getFullYear();
-  
-  window.onload = function () {
-  var btn = document.getElementById("back-to-top");
-  var timer = null;
-  var isTop = true;
-
-  window.onscroll = function () {
-    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-
-    if (scrollTop > 100) {
-      btn.style.display = "block";
-    } else {
-      btn.style.display = "none";
-    }
-
-    if (!isTop) {
-      clearInterval(timer);
-    }
-    isTop = false;
-  };
-
-  btn.onclick = function () {
-    timer = setInterval(function () {
-      var osTop = document.documentElement.scrollTop || document.body.scrollTop;
-
-      var speed = Math.floor(-osTop / 5);
-
-      document.documentElement.scrollTop = document.body.scrollTop = osTop + speed;
-
-      isTop = true;
-
-      if (osTop === 0) {
-        clearInterval(timer);
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 — Page Not Found</title>
+    <link rel="stylesheet" href="css/html5reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      .not-found {
+        min-height: 60vh;
+        display: grid;
+        place-items: center;
+        text-align: center;
+        padding: 2rem;
       }
-    }, 5);
-  };
-};
-</script></body>
-<!-- Content and script logic adapted from:
-     Wang, F. (2016). “实现返回顶部效果的3种方式”.
-     Retrieved from https://frankwang0909.github.io/back-to-top.html 
--->
-  </script>
-</body>
+      .not-found h1 {
+        font-size: 2rem;
+        margin: 0.5rem 0;
+        color: #00274c;
+      }
+      .not-found p {
+        color: #444;
+      }
+      .actions {
+        margin-top: 1rem;
+        display: flex;
+        gap: 0.75rem;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+      .btn {
+        border: 1px solid #e6e9ee;
+        background: #f4f7fa;
+        color: #00274c;
+        padding: 0.6rem 0.9rem;
+        border-radius: 0.5rem;
+        text-decoration: none;
+        display: inline-block;
+        min-height: 44px;
+      }
+    </style>
+  </head>
+  <body>
+    <header id="top">
+      <a class="skip-link" href="#main">Skip to Main Content</a>
+      <img
+        src="images/UMSI_signature_vertical_informal_solidblue.jpg"
+        alt="UMSI Logo"
+      />
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resumes</a></li>
+          <li><a href="networking.html">Networking &amp; Connections</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="main" class="not-found">
+      <div>
+        <h1>404 — Page Not Found</h1>
+        <p>We can't find the page you're looking for. Try one of these:</p>
+        <div class="actions">
+          <a class="btn" href="index.html">Go Home</a>
+          <a class="btn" href="resume.html">Resume Resources</a>
+          <a class="btn" href="networking.html">Networking</a>
+          <a class="btn" href="portfolio.html">Portfolio</a>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <p>
+        University of Michigan School of Information |
+        <a href="https://umsi.instructure.com/courses/137916"
+          >UMSI Career Development Office</a
+        >
+        • <span class="year"></span>
+      </p>
+      <p>© <span id="year"></span> UMSI. All rights reserved.</p>
+    </footer>
+
+    <a id="back-to-top" class="back-to-top" href="#top" aria-label="Back to top"
+      >↑ Top</a
+    >
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+
+      window.onload = function () {
+        var btn = document.getElementById("back-to-top");
+        var timer = null;
+        var isTop = true;
+
+        window.onscroll = function () {
+          var scrollTop =
+            document.documentElement.scrollTop || document.body.scrollTop;
+
+          btn.style.display = scrollTop > 100 ? "block" : "none";
+
+          if (!isTop) {
+            clearInterval(timer);
+          }
+          isTop = false;
+        };
+
+        btn.onclick = function () {
+          timer = setInterval(function () {
+            var osTop =
+              document.documentElement.scrollTop || document.body.scrollTop;
+
+            var speed = Math.floor(-osTop / 5);
+            document.documentElement.scrollTop =
+              document.body.scrollTop =
+                osTop + speed;
+
+            isTop = true;
+
+            if (osTop === 0) {
+              clearInterval(timer);
+            }
+          }, 5);
+        };
+      };
+    </script>
+    <!-- Content and script logic adapted from:
+         Wang, F. (2016). “实现返回顶部效果的3种方式”.
+         Retrieved from https://frankwang0909.github.io/back-to-top.html -->
+  </body>
 </html>
