--- a/index.html
+++ b/index.html
@@ -1,127 +1,230 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>MSI Career Development Resource Hub</title>
-<link href="css/html5reset.css" rel="stylesheet"/>
-<link href="css/style.css" rel="stylesheet"/>
-</head>
-<body>
-<header id="top">
-<a class="skip-link" href="#main">Skip to Main Content</a>
-<img alt="UMSI Logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg"/>
-<nav>
-<ul>
-<li><a aria-current="page" href="index.html">Home</a></li>
-<li><a href="resume.html">Resumes</a></li>
-<li><a href="networking.html">Networking &amp; Connections</a></li>
-<li><a href="portfolio.html">Portfolio</a></li>
-</ul>
-</nav>
-<h1>Welcome to the UMSI Career Development Resource Hub</h1>
-</header>
-<main id="main">
-<section>
-<h2>Your Central Hub for Career Success at UMSI</h2>
-<p>
-        Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MSI Career Development Resource Hub</title>
+    <link rel="stylesheet" href="css/html5reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header id="top">
+      <a class="skip-link" href="#main">Skip to Main Content</a>
+      <img
+        src="images/UMSI_signature_vertical_informal_solidblue.jpg"
+        alt="UMSI Logo"
+      />
+      <nav>
+        <ul>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="resume.html">Resumes</a></li>
+          <li><a href="networking.html">Networking &amp; Connections</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </nav>
+      <h1>Welcome to the UMSI Career Development Resource Hub</h1>
+    </header>
+
+    <main id="main">
+      <section>
+        <h2>Your Central Hub for Career Success at UMSI</h2>
+        <p>
+          Ready to take the next step toward your future career? The UMSI Career
+          Development Resource Hub is your one-stop shop for trusted guidance,
+          practical tools, and the latest information to help you thrive as a
+          student and job-seeker. Whether you are just starting your exploration
+          or getting ready to launch your career, you will find everything you
+          need, organized for you.
+        </p>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG"
+          title="Welcome video: UMSI Career Development"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          referrerpolicy="strict-origin-when-cross-origin"
+        ></iframe>
+      </section>
+
+      <section>
+        <h2>Why Use This Resource?</h2>
+        <ul>
+          <li>
+            <strong>Everything in One Place:</strong> Stop searching
+            endlessly—quickly access the resources you need for resumes,
+            interviews, networking, mentorship, and more.
+          </li>
+          <li>
+            <strong>Student-Focused Navigation:</strong> Browse by topic or
+            question. Key areas are highlighted so you can get moving right
+            away.
+          </li>
+          <li>
+            <strong>Guidance Backed by Experts:</strong> All resources are
+            recommended and reviewed by the UMSI Career Development Office, so
+            you can trust the advice and materials you find here.
+          </li>
+          <li>
+            <strong>Always Accessible:</strong> Visit the site anytime, from any
+            device. We’re committed to meeting the accessibility needs of all
+            students.
+          </li>
+          <li>
+            <strong>Modern Support, UMSI Excellence:</strong> We benchmark
+            against top peer institutions and integrate UMSI’s unique support,
+            showcasing our commitment to your success.
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Start Here</h2>
+        <div>
+          <img
+            src="images/UMSI_CampusFall_UMSIBackpack_02.jpg"
+            alt="A student wears a UMSI backpack in fall on the drag."
+          />
+          <ul>
+            <li><a href="resume.html">Resumes</a></li>
+            <li><a href="networking.html">Networking &amp; Connections</a></li>
+            <li><span>Career Exploration</span></li>
+            <li>
+              <a
+                href="https://umsi.instructure.com/courses/137916"
+                target="_blank"
+                rel="noopener"
+                >Talk to a Career Coach</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 id="popular-resources">Most Popular Resources</h3>
+          <ul>
+            <li>
+              <a
+                href="https://umsi.instructure.com/courses/12345/pages/resume-guide"
+                target="_blank"
+                rel="noopener"
+                >UMSI Resume Guide</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://umsi.campusgroups.com/cdo/home/"
+                target="_blank"
+                rel="noopener"
+                >Attend a Career Event</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://umsi.instructure.com/courses/12345/pages/networking-tips"
+                target="_blank"
+                rel="noopener"
+                >Networking Tips</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://umsi.instructure.com/courses/12345/pages/interview-prep"
+                target="_blank"
+                rel="noopener"
+                >Interview Preparation</a
+              >
+            </li>
+            <li>
+              <a href="https://careerlink.umich.edu" target="_blank" rel="noopener"
+                >Career Link: UMSI’s Exclusive Career Portal</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <h2>Connect with the UMSI Career Development Office</h2>
+        <p>
+          The UMSI Career Development Office (CDO) offers personalized support
+          through appointments, events, and resource guides.
+          <a
+            href="https://www.si.umich.edu/programs/career-development-office"
+            target="_blank"
+            rel="noopener"
+            >Visit the CDO website</a
+          >
+          or
+          <a
+            href="https://umsi.umich.edu/about/locations"
+            target="_blank"
+            rel="noopener"
+            >find us on campus</a
+          >
+          to learn more, schedule a coaching session, or just say hello.
+        </p>
+      </section>
+      <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
+           UMGPT. (2025). UMGPT ( GPT-4.1 September 7th version) [Large language model]. -->
+    </main>
+
+    <footer>
+      <p>
+        University of Michigan School of Information |
+        <a href="https://umsi.instructure.com/courses/137916"
+          >UMSI Career Development Office
+        </a>
+        • <span class="year"></span>
       </p>
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="Welcome video: UMSI Career Development" width="560">
-</iframe>
-</section>
-<section>
-<h2>Why Use This Resource?</h2>
-<ul>
-<li><strong>Everything in One Place:</strong> Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
-<li><strong>Student-Focused Navigation:</strong> Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
-<li><strong>Guidance Backed by Experts:</strong> All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-<li><strong>Always Accessible:</strong> Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
-<li><strong>Modern Support, UMSI Excellence:</strong> We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
-</ul>
-</section>
-<section>
-<h2>Start Here</h2>
-<div>
-<img alt="A student wears a UMSI backpack in fall on the drag." src="images/UMSI_CampusFall_UMSIBackpack_02.jpg"/>
-<ul>
-<li><a href="resume.html">Resumes</a></li>
-<li><a href="networking.html">Networking &amp; Connections</a></li>
-<li><span>Career Exploration</span></li>
-<li><a href="https://umsi.instructure.com/courses/137916" rel="noopener" target="_blank">Talk to a Career Coach</a></li>
-</ul>
-</div>
-<div>
-<h3 id="popular-resources">Most Popular Resources</h3>
-<ul>
-<li><a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" rel="noopener" target="_blank">UMSI Resume Guide</a></li>
-<li><a href="https://umsi.campusgroups.com/cdo/home/" rel="noopener" target="_blank">Attend a Career Event</a></li>
-<li><a href="https://umsi.instructure.com/courses/12345/pages/networking-tips" rel="noopener" target="_blank">Networking Tips</a></li>
-<li><a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" rel="noopener" target="_blank">Interview Preparation</a></li>
-<li><a href="https://careerlink.umich.edu" rel="noopener" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
-</ul>
-</div></section>
-<section>
-<h2>Connect with the UMSI Career Development Office</h2>
-<p>
-        The UMSI Career Development Office (CDO) offers personalized support through appointments, events, and resource guides.
-        <a href="https://www.si.umich.edu/programs/career-development-office" rel="noopener" target="_blank">Visit the CDO website</a>
-        or
-        <a href="https://umsi.umich.edu/about/locations" rel="noopener" target="_blank">find us on campus</a>
-        to learn more, schedule a coaching session, or just say hello.
-      </p>
-</section>
-<!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
-         UMGPT. (2025). UMGPT ( GPT-4.1 September 7th version) [Large language model]. -->
-</main>
-<footer>
-<p>University of Michigan School of Information | <a href="https://umsi.instructure.com/courses/137916">UMSI Career Development Office </a> • <span class="year"></span></p>
-<p>© <span id="year"></span> UMSI. All rights reserved.</p>
-</footer>
-<a aria-label="Back to top" class="back-to-top" href="#top" id="back-to-top">↑ Top</a>
-<script>
-document.getElementById("year").innerHTML = new Date().getFullYear();
+      <p>© <span id="year"></span> UMSI. All rights reserved.</p>
+    </footer>
 
-window.onload = function () {
-  var btn = document.getElementById("back-to-top");
-  var timer = null;
-  var isTop = true;
+    <a id="back-to-top" class="back-to-top" href="#top" aria-label="Back to top"
+      >↑ Top</a
+    >
 
-  window.onscroll = function () {
-    var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
 
-    if (scrollTop > 100) {
-      btn.style.display = "block";
-    } else {
-      btn.style.display = "none";
-    }
+      window.onload = function () {
+        var btn = document.getElementById("back-to-top");
+        var timer = null;
+        var isTop = true;
 
-    if (!isTop) {
-      clearInterval(timer);
-    }
-    isTop = false;
-  };
+        window.onscroll = function () {
+          var scrollTop =
+            document.documentElement.scrollTop || document.body.scrollTop;
 
-  btn.onclick = function () {
-    timer = setInterval(function () {
-      var osTop = document.documentElement.scrollTop || document.body.scrollTop;
+          btn.style.display = scrollTop > 100 ? "block" : "none";
 
-      var speed = Math.floor(-osTop / 5);
+          if (!isTop) {
+            clearInterval(timer);
+          }
+          isTop = false;
+        };
 
-      document.documentElement.scrollTop = document.body.scrollTop = osTop + speed;
+        btn.onclick = function () {
+          timer = setInterval(function () {
+            var osTop =
+              document.documentElement.scrollTop || document.body.scrollTop;
 
-      isTop = true;
+            var speed = Math.floor(-osTop / 5);
+            document.documentElement.scrollTop =
+              document.body.scrollTop =
+                osTop + speed;
 
-      if (osTop === 0) {
-        clearInterval(timer);
-      }
-    }, 5);
-  };
-};
-</script></body>
-<!-- Content and script logic adapted from:
-     Wang, F. (2016). “实现返回顶部效果的3种方式”.
-     Retrieved from https://frankwang0909.github.io/back-to-top.html 
--->
+            isTop = true;
+
+            if (osTop === 0) {
+              clearInterval(timer);
+            }
+          }, 5);
+        };
+      };
+    </script>
+    <!-- Content and script logic adapted from:
+         Wang, F. (2016). “实现返回顶部效果的3种方式”.
+         Retrieved from https://frankwang0909.github.io/back-to-top.html -->
+  </body>
 </html>
